:sparkles: Necessary Refresh Token retrieval and redeeming tools are implemented. Refresh token duration is increased to 1 year.