@@ -6,7 +6,16 @@ import io.passport.server.config.KeycloakProvider;
 import io.passport.server.model.Role;
 import jakarta.ws.rs.core.Response;
 import lombok.Getter;
+import org.apache.http.NameValuePair;
+import org.apache.http.client.entity.UrlEncodedFormEntity;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.message.BasicNameValuePair;
+import org.apache.http.util.EntityUtils;
+import org.keycloak.OAuth2Constants;
 import org.keycloak.admin.client.Keycloak;
+import org.keycloak.admin.client.KeycloakBuilder;
 import org.keycloak.admin.client.resource.*;
 import org.keycloak.representations.AccessTokenResponse;
 import org.keycloak.representations.idm.GroupRepresentation;
@@ -18,6 +27,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Configuration;
 
+import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -58,6 +68,79 @@ public class KeycloakService {
     }
 
     /**
+     * Issue a long-term Refresh Token for the user with given credentials.
+     * @param username Username of the user for the Refresh Token
+     * @param password Password of the user for the Refresh Token
+     * @return The Refresh Token
+     */
+    public String createOfflineSecret(String username, String password) {
+
+        String tokenUrl = String.format("%s/realms/%s/protocol/openid-connect/token",
+                keycloakProvider.getServerURL(), keycloakProvider.getRealm());
+
+        List<NameValuePair> body = List.of(
+                new BasicNameValuePair("grant_type",    "password"),
+                new BasicNameValuePair("client_id",     keycloakProvider.getClientID()),
+                new BasicNameValuePair("client_secret", keycloakProvider.getClientSecret()),
+                new BasicNameValuePair("username",      username),
+                new BasicNameValuePair("password",      password),
+                new BasicNameValuePair("scope",         "offline_access")
+        );
+
+        try (CloseableHttpClient http = HttpClients.createDefault()) {
+
+            HttpPost post = new HttpPost(tokenUrl);
+            post.setEntity(new UrlEncodedFormEntity(body));
+
+            try (var response = http.execute(post)) {
+                String json = EntityUtils.toString(response.getEntity());
+                AccessTokenResponse atr = objectMapper.readValue(json, AccessTokenResponse.class);
+
+                return atr.getRefreshToken();
+            }
+
+        } catch (IOException e) {
+            throw new RuntimeException("Unable to obtain offline token", e);
+        }
+    }
+
+
+    /**
+     * Redeem the Refresh Token for an actual Access Token.
+     * @param offlineRefreshToken The secret given to the user.
+     * @return Access Token response with an Access Token
+     */
+    public AccessTokenResponse refreshWithSecret(String offlineRefreshToken) {
+
+        String tokenUrl = String.format("%s/realms/%s/protocol/openid-connect/token",
+                keycloakProvider.getServerURL(), realm);
+
+        List<NameValuePair> body = List.of(
+                new BasicNameValuePair(OAuth2Constants.GRANT_TYPE,  OAuth2Constants.REFRESH_TOKEN),
+                new BasicNameValuePair(OAuth2Constants.REFRESH_TOKEN, offlineRefreshToken),
+                new BasicNameValuePair(OAuth2Constants.CLIENT_ID,   keycloakProvider.getClientID()),
+                new BasicNameValuePair("client_secret",             keycloakProvider.getClientSecret())
+        );
+
+        try (CloseableHttpClient client = HttpClients.createDefault()) {
+            HttpPost post = new HttpPost(tokenUrl);
+            post.setEntity(new UrlEncodedFormEntity(body));
+
+            String json = EntityUtils.toString(client.execute(post).getEntity());
+            AccessTokenResponse atr = objectMapper.readValue(json, AccessTokenResponse.class);
+
+            if (atr.getToken() == null || atr.getToken().isBlank()) {
+                throw new IllegalStateException("Keycloak did not return an access_token - refresh token may be expired or revoked.");
+            }
+            return atr;
+
+        } catch (IOException e) {
+            throw new RuntimeException("Could not refresh token", e);
+        }
+    }
+
+
+    /**
      * Creates a Keycloak user with the given username and password, then assigns the specified role.
      * @param username the username for the new Keycloak user.
      * @param password the password for the new Keycloak user.
@@ -65,30 +148,44 @@ public class KeycloakService {
      * @return Optional<String> Keycloak user ID if creation is successful.
      */
     public Optional<String> createUserAndReturnId(String username, String password, Role role) {
+
         UserRepresentation user = new UserRepresentation();
         user.setUsername(username);
         user.setEnabled(true);
 
-        CredentialRepresentation credential = new CredentialRepresentation();
-        credential.setTemporary(false);
-        credential.setType(CredentialRepresentation.PASSWORD);
-        credential.setValue(password);
+        CredentialRepresentation cred = new CredentialRepresentation();
+        cred.setType(CredentialRepresentation.PASSWORD);
+        cred.setValue(password);
+        cred.setTemporary(false);
 
-        user.setCredentials(Collections.singletonList(credential));
+        user.setCredentials(List.of(cred));
+
         try {
-            Response response = usersResource.create(user);
-            if (!response.getStatusInfo().getFamily().equals(Response.Status.Family.SUCCESSFUL)) {
-                response.close();
-                throw new Exception("Keycloak did not return a successful response!");
+            Response resp = usersResource.create(user);
+            if (!resp.getStatusInfo().getFamily().equals(Response.Status.Family.SUCCESSFUL)) {
+                resp.close();
+                throw new IllegalStateException("Keycloak user-creation failed");
             }
-            String[] path = response.getLocation().getPath().split("/");
-            String keycloakUserId = path[path.length - 1];
-            response.close();
-            this.updateRole(keycloakUserId, role);
-            return Optional.of(keycloakUserId);
+            String userId = resp.getLocation().getPath().replaceAll(".*/([^/]+)$", "$1");
+            resp.close();
+
+            if (role != null) {
+                updateRole(userId, role);
+            }
+
+            RoleRepresentation offline =
+                    keycloak.realm(realm).roles().get(OAuth2Constants.OFFLINE_ACCESS)
+                            .toRepresentation();
+
+            usersResource.get(userId)
+                    .roles()
+                    .realmLevel()
+                    .add(Collections.singletonList(offline));
+
+            return Optional.of(userId);
 
         } catch (Exception e) {
-            log.error(e.getMessage());
+            log.error("User creation failed – {}", e.getMessage(), e);
             return Optional.empty();
         }
     }
